[gd_scene load_steps=5 format=3 uid="uid://ypshs4jgwspk"]

[ext_resource type="Theme" uid="uid://d12goax56bwxn" path="res://Assets/UI/DefaultTheme.tres" id="1_x38v5"]
[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="2_vvu5j"]
[ext_resource type="Texture2D" uid="uid://bn5hqw8op1xmq" path="res://Assets/Avians Logo 2.0.png" id="3_0gwcu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fiv3n"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_x38v5")
script = ExtResource("2_vvu5j")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.0
offset_top = -103.0
offset_right = 134.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Aviary" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Aviary"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Stats" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Stats"

[node name="Spacer4" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(18, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Quit" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="QuitMenu" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.0
offset_top = -64.5
offset_right = 71.0
offset_bottom = 64.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="QuitMenu"]
layout_mode = 2
theme_override_constants/margin_left = 22
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 22
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer2" type="VBoxContainer" parent="QuitMenu/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="QuitMenu/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Are you sure you 
want to exit?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="QuitMenu/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="Spacer" type="Control" parent="QuitMenu/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Yes" type="Button" parent="QuitMenu/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Yes"

[node name="Spacer2" type="Control" parent="QuitMenu/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="No" type="Button" parent="QuitMenu/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "No"

[node name="Spacer3" type="Control" parent="QuitMenu/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Start" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -398.5
offset_top = 160.0
offset_right = 398.5
offset_bottom = 238.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_fiv3n")
text = "Left-Click to Start!"
horizontal_alignment = 1

[node name="ShowTimer" type="Timer" parent="Start"]
wait_time = 0.5
one_shot = true

[node name="HideTimer" type="Timer" parent="Start"]
one_shot = true

[node name="AviansLogo2_0" type="Sprite2D" parent="."]
position = Vector2(960, 225)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0gwcu")

[connection signal="mouse_entered" from="VBoxContainer/Options" to="." method="_on_options_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Options" to="." method="_on_options_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Aviary" to="." method="_on_birds_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Aviary" to="." method="_on_birds_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Aviary" to="." method="_on_aviary_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/Stats" to="." method="_on_stats_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/Stats" to="." method="_on_stats_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Stats" to="." method="_on_stats_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/Quit" to="." method="_on_quit_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="QuitMenu/MarginContainer/VBoxContainer2/HBoxContainer/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="QuitMenu/MarginContainer/VBoxContainer2/HBoxContainer/No" to="." method="_on_no_pressed"]
[connection signal="timeout" from="Start/ShowTimer" to="." method="_on_show_timer_timeout"]
[connection signal="timeout" from="Start/HideTimer" to="." method="_on_hide_timer_timeout"]
